--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content= "IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+  		<meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta http-equiv="X-UA-Compatible" content= "IE=edge">
 
-    <title>Reddit Feed</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
+      <title>Reddit Feed</title>
+  		<link rel="stylesheet" type="text/css" href="style.css">
+  		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+	</head>
 
-  <body>
-    <h1>Readit Feed</h1>
+	<body>
+		<h1>Reddit Feed Awww Posts</h1>
+		<article id="mainPage">
+		</article>
 
-    <script src="jquery-3.2.1.js"></script>
-    <script src="script.js"></script>
-  </body>
+		<script src="jquery-3.2.1.js"></script>
+		<script src="scripts.js" charset="utf-8"></script>
+	</body>
 </html>
